--- a/css/execas.css
+++ b/css/execas.css
@@ -68,10 +68,10 @@ pre code {
 }
 code {
      /*background-color: #f6f8fa;*/
-     background-color:#707070;
+     background-color:#505050;
      font-family: "Source Code Pro", monospace;
      whitespace:normal;
-     color:#000000;
+     color:#ffffff;
      font-size:14px;
      /*border-width: 1px;
      border-style: solid;
@@ -242,7 +242,7 @@ postinfo: title, date, tags
        
 .post-title {
      font-size: 2.5rem;
-     color:#333333;
+     color:#eeeeee;
      margin-bottom:0.5rem;
 }
 
