--- a/css/execas.css
+++ b/css/execas.css
@@ -248,7 +248,7 @@ postinfo: title, date, tags
 }
 
 .post-date {
-     color: #000000;
+     color: #9d9d9d;
      margin-right: 12px;
      margin-left: 12px;
      font-size: 12px;
