--- a/css/execas.css
+++ b/css/execas.css
@@ -9,7 +9,7 @@ body {
      /*color: #252525;*/
      color:#ffffff;
      font-size: 16px;
-     background-color:#ffffff;
+     background-color:#393939;
      /*background-color: #1d1e22;*/
      /*background-color: #f2f2f2;*/
      /*background-color: #ffffff;*/
