--- a/css/execas.css
+++ b/css/execas.css
@@ -282,7 +282,7 @@ END: postinfo
 }
      
 .post h2 {
-     /*color: #d33682;/*
+     /*color: #d33682;*/
      color: #582c4d;
      font-size: 2rem;
      margin-top: 2rem;
