--- a/css/execas.css
+++ b/css/execas.css
@@ -9,7 +9,7 @@ body {
      /*color: #252525;*/
      color:#000000;
      font-size: 16px;
-     background-color:#ece2do;
+     background-color:#ffffff;
      /*background-color: #1d1e22;*/
      /*background-color: #f2f2f2;*/
      /*background-color: #ffffff;*/
