--- a/css/execas.css
+++ b/css/execas.css
@@ -9,7 +9,7 @@ body {
      /*color: #252525;*/
      color: #000000;
      font-size: 16px;
-     background-color: #ffffff;
+     background-color: #f5f1ed;
      /*background-color: #1d1e22;*/
      /*background-color: #f2f2f2;*/
      /*background-color: #ffffff;*/
@@ -18,7 +18,7 @@ body {
 #wrapper {
      padding: 30px 15px 70px 15px;
      max-width: 718px;
-     background-color: #ece2do;
+     background-color: #f5f1ed;
      margin: 0 auto; 
      /*border: 1px solid #707070;*/
 }
@@ -34,7 +34,7 @@ pre {
      /*background-color: #f5f5f5;*/
      /*background-color: #f6f8fa;*/
      /*background-color:#232c31;*/
-     background-color:#BFB5AF;
+     background-color:#252323;
      /*background-color:#000000;*/
      margin-left:0px;
      margin-right:5px;
@@ -59,7 +59,7 @@ pre code {
      /*color:#000000;
      background-color: #f6f8fa;*/
      
-     color:#000000;
+     color:#ffffff;
      /*background-color:#232c31;*/
      background-color:#bfb5af;
      /*color:#ffffff;
@@ -70,7 +70,7 @@ pre code {
 }
 code {
      /*background-color: #f6f8fa;*/
-     background-color:#d5b9b2;
+     background-color:#dad2bc;
      font-family: "Source Code Pro", monospace;
      whitespace:normal;
      color:#000000;
@@ -283,7 +283,7 @@ END: postinfo
      
 .post h2 {
      /*color: #d33682;*/
-     color: #582c4d;
+     color: #70798c;
      font-size: 2rem;
      margin-top: 2rem;
      margin-bottom:1rem;
@@ -303,7 +303,7 @@ END: postinfo
 }
 
 .post h3 {
-     color: #A26769;
+     color: #a99985;
      font-size: 1.5rem;
      margin-top:2rem;
      margin-bottom:1rem;
