--- a/css/execas.css
+++ b/css/execas.css
@@ -61,7 +61,7 @@ pre code {
      
      color:#ffffff;
      /*background-color:#232c31;*/
-     background-color:#bfb5af;
+     background-color:#252323;
      /*color:#ffffff;
      background-color:#444444;*/
      border-width: 0px;
