--- a/css/execas.css
+++ b/css/execas.css
@@ -142,7 +142,7 @@ p {
 .header h1 {
      font-size: 3rem;
      margin-right: 3rem;
-     color: #ffffff;
+     color: #000000;
      display: inline;
      margin-top: 0px;
      margin-bottom:0px;
@@ -282,8 +282,7 @@ END: postinfo
 }
      
 .post h2 {
-     /*color: #d33682;*/
-     color: #70798c;
+     color: #d33682;
      font-size: 2rem;
      margin-top: 2rem;
      margin-bottom:1rem;
@@ -303,7 +302,7 @@ END: postinfo
 }
 
 .post h3 {
-     color: #a99985;
+     color: #333333;
      font-size: 1.5rem;
      margin-top:2rem;
      margin-bottom:1rem;
