--- a/css/execas.css
+++ b/css/execas.css
@@ -70,7 +70,7 @@ pre code {
 }
 code {
      /*background-color: #f6f8fa;*/
-     background-color:#dad2bc;
+     background-color:#ffffff;
      font-family: "Source Code Pro", monospace;
      whitespace:normal;
      color:#000000;
