--- a/css/execas.css
+++ b/css/execas.css
@@ -244,7 +244,7 @@ postinfo: title, date, tags
        
 .post-title {
      font-size: 2.5rem;
-     color:#eeeeee;
+     color:#000000;
      margin-bottom:0.5rem;
 }
 
