--- a/css/execas.css
+++ b/css/execas.css
@@ -69,8 +69,7 @@ pre code {
      padding:0;
 }
 code {
-     /*background-color: #f6f8fa;*/
-     background-color:#707070;
+     background-color: #f6f8fa;
      font-family: "Source Code Pro", monospace;
      whitespace:normal;
      color:#000000;
@@ -130,8 +129,8 @@ p {
 .header {
      font-family: 'Inconsolata', monospace;
      margin-top:0;
-     background-color:#393939;
-     color: #ffffff;
+     background-color:#ffffff;
+     color: #000000;
      margin:0 auto;
      max-width: 720px;
      padding: 10px 14px 10px 14px;
