--- a/css/execas.css
+++ b/css/execas.css
@@ -189,7 +189,7 @@ list of matching posts beneath tag name header
      margin-top: 0rem;
 }
 .tag-posts h3 a {
-     color: #ffffff;
+     color: #000000;
 }
 
 .top-tagmarks {
