--- a/css/execas.css
+++ b/css/execas.css
@@ -41,8 +41,7 @@ pre {
      padding-left: 10px;
      padding-bottom: 12px;
      padding-top: 12px;
-     border: 2px solid #f5f1ed;
-     /*border-left: 4px solid #707070;*/
+     4px solid #707070;
      white-space: pre;
      color:#000000;
      overflow: auto;
