--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,8 @@
    {% endif %}
   </title>
   <link rel="stylesheet" href="{{ site.baseurl }}/css/execas.css">
- </head>
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/syntax-highlight.css">
+  </head>
  <body>
   <div class="header">
    <h1>exec</h1> <a href={{site.home_page}}>Latest</a> | <a href={{site.tag_page}}>Tags</a> | <a href=>About</a>
