--- a/css/syntax-highlight.css
+++ b/css/syntax-highlight.css
@@ -4,6 +4,8 @@
   color: #999988;
   font-style: italic;
 }
+
+/*
 .highlight .cp {
   color: #999999;
   font-weight: bold;
@@ -207,3 +209,4 @@
 .highlight {
   background-color: #f8f8f8;
 }
+*/
