--- a/css/syntax-highlight.css
+++ b/css/syntax-highlight.css
@@ -1,8 +1,7 @@
 .highlight table td { padding: 5px; }
 .highlight table pre { margin: 0; }
 .highlight .cm {
-  color: #707070;
-  font-style: italic;
+  color: #5e8d87;
 }
 
 /*
