--- a/css/syntax-highlight.css
+++ b/css/syntax-highlight.css
@@ -1,7 +1,7 @@
 .highlight table td { padding: 5px; }
 .highlight table pre { margin: 0; }
 .highlight .cm {
-  color: #5e8d87;
+  color: #c5f5cb;
 }
 
 /*
