--- a/css/execas.css
+++ b/css/execas.css
@@ -4,7 +4,8 @@ html, body {
 
 body {
      /*font-family: 'PT Sans', sans-serif;*/
-     font-family:"Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
+     font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Sans", sans-serif;
+     /*font-family:"Lato","Helvetica Neue",Helvetica,Arial,sans-serif;*/
      font-weight: 400;
      /*color: #252525;*/
      color: #000000;
