--- a/css/execas.css
+++ b/css/execas.css
@@ -302,7 +302,7 @@ END: postinfo
 }
 
 .post h3 {
-     color: #3D9CAF;
+     color: #343434;
      font-size: 1.2rem;
      margin-top:2rem;
      margin-bottom:1rem;
