--- a/css/execas.css
+++ b/css/execas.css
@@ -58,11 +58,11 @@ pre code {
      font-size:13px;
      /*color:#000000;
      background-color: #f6f8fa;*/
-     
      color:#ffffff;
      /*background-color:#232c31;*/
-     background-color:#252323;
-     /*color:#ffffff;
+     /*background-color:#252323;*/
+     background-color:#f5f5f5;
+     color:#0000000;
      background-color:#444444;*/
      border-width: 0px;
      border-radius:0px;
