--- a/css/execas.css
+++ b/css/execas.css
@@ -35,7 +35,7 @@ pre {
      /*background-color: #f5f5f5;*/
      /*background-color: #f6f8fa;*/
      /*background-color:#232c31;*/
-     background-color:#252323;
+     background-color:#f6f8fa;
      /*background-color:#000000;*/
      margin-left:0px;
      margin-right:5px;
@@ -56,12 +56,11 @@ pre code {
      border-style: none;
      whitespace: pre;
      font-size:13px;
-     /*color:#000000;
-     background-color: #f6f8fa;*/
+     /*color:#000000;*/
+     background-color: #f6f8fa;
      color:#ffffff;
      /*background-color:#232c31;*/
      /*background-color:#252323;*/
-     background-color:#f5f5f5;
      color:#0000000;
      background-color:#444444;*/
      border-width: 0px;
