--- a/css/execas.css
+++ b/css/execas.css
@@ -35,7 +35,7 @@ pre {
      /*background-color: #f5f5f5;*/
      /*background-color: #f6f8fa;*/
      /*background-color:#232c31;*/
-     background-color:#f6f8fa;
+     background-color:#f8f8ff;
      /*background-color:#000000;*/
      margin-left:0px;
      margin-right:5px;
@@ -57,12 +57,11 @@ pre code {
      whitespace: pre;
      font-size:13px;
      /*color:#000000;*/
-     background-color: #f6f8fa;
+     background-color: #f8f8ff;
      color:#ffffff;
      /*background-color:#232c31;*/
      /*background-color:#252323;*/
      color:#0000000;
-     background-color:#444444;*/
      border-width: 0px;
      border-radius:0px;
      padding:0;
