--- a/css/execas.css
+++ b/css/execas.css
@@ -35,13 +35,14 @@ pre {
      /*background-color: #f5f5f5;*/
      /*background-color: #f6f8fa;*/
      /*background-color:#232c31;*/
-     background-color:#f8f8ff;
+     background-color:#ffffff;
      /*background-color:#000000;*/
      margin-left:0px;
      margin-right:5px;
      padding-left: 10px;
      padding-bottom: 12px;
      padding-top: 12px;
+     border: 1px solid #707070;
      border-left:4px solid #707070;
      white-space: pre;
      color:#000000;
@@ -56,10 +57,10 @@ pre code {
      border-style: none;
      whitespace: pre;
      font-size:13px;
-     /*color:#000000;*/
-     background-color: #f8f8ff;
+     /*background-color: #f8f8ff;*/
      /*background-color:#232c31;*/
      /*background-color:#252323;*/
+     background-color:#ffffff;
      color:#0000000;
      border-width: 0px;
      border-radius:0px;
