--- a/css/execas.css
+++ b/css/execas.css
@@ -10,8 +10,8 @@ body {
      /*color: #252525;*/
      color: #000000;
      font-size: 15px;
-     background-color: #f5f1ed;
-     /*background-color: #1d1e22;*/
+     /*background-color: #f5f1ed;*/
+     background-color: #1d1e22;
      /*background-color: #f2f2f2;*/
      /*background-color: #ffffff;*/
 }
