--- a/css/execas.css
+++ b/css/execas.css
@@ -35,7 +35,7 @@ pre {
      /*background-color: #f5f5f5;*/
      /*background-color: #f6f8fa;*/
      /*background-color:#232c31;*/
-     background-color:#ffffff;
+     background-color:#32303f;
      /*background-color:#000000;*/
      margin-left:0px;
      margin-right:5px;
@@ -60,8 +60,8 @@ pre code {
      /*background-color: #f8f8ff;*/
      /*background-color:#232c31;*/
      /*background-color:#252323;*/
-     background-color:#ffffff;
-     color:#0000000;
+     background-color:#32303f;
+     color:#ffffff;
      border-width: 0px;
      border-radius:0px;
      padding:0;
