--- a/css/execas.css
+++ b/css/execas.css
@@ -10,7 +10,7 @@ body {
      color: #000000;
      font-size: 15px;
      /*background-color: #f5f1ed;*/
-     background-color: #1d1e22;
+     background-color: #928374;
      /*background-color: #f2f2f2;*/
      /*background-color: #ffffff;*/
 }
