--- a/css/execas.css
+++ b/css/execas.css
@@ -63,7 +63,7 @@ pre code {
 }
 
 code {
-     background-color: #fbf1c7;
+     background-color: #ebdbb2;
      /*background-color: #f6f8fa;*/
      font-family: "Source Code Pro", monospace;
      whitespace:normal;
