--- a/css/execas.css
+++ b/css/execas.css
@@ -229,8 +229,6 @@ postinfo: title, date, tags
 */
 .post-info {
      margin-bottom:3rem;
-     background-color:#1d2021;
-     padding:15px;
 }
        
 .post-title {
@@ -240,7 +238,7 @@ postinfo: title, date, tags
 }
 
 .post-date {
-     color: #d3869b;
+     color: #9d9d9d;
      margin-right: 12px;
      margin-left: 12px;
      font-size: 12px;
