--- a/css/execas.css
+++ b/css/execas.css
@@ -233,12 +233,12 @@ postinfo: title, date, tags
        
 .post-title {
      font-size: 3.5rem;
-     color:#458588;
+     color:#1d2021;
      margin-bottom:0.5rem;
 }
 
 .post-date {
-     color: #9d9d9d;
+     color: #282828;
      margin-right: 12px;
      margin-left: 12px;
      font-size: 12px;
@@ -246,7 +246,7 @@ postinfo: title, date, tags
 .post-tag {
     padding: .1rem .2rem .1rem .2rem;
     font-size: 80%;
-    color: #fabd2f;
+    color: #3c3836;
     /*border: 1px solid #ccc;*/
     text-decoration: none;
 }
