--- a/css/execas.css
+++ b/css/execas.css
@@ -63,8 +63,7 @@ pre code {
 }
 
 code {
-     background-color: #ebdbb2;
-     /*background-color: #f6f8fa;*/
+     background-color: #f6f8fa;
      font-family: "Source Code Pro", monospace;
      whitespace:normal;
      color:#000000;
