--- a/css/execas.css
+++ b/css/execas.css
@@ -10,9 +10,9 @@ body {
      color: #000000;
      font-size: 15px;
      /*background-color: #f5f1ed;*/
-     background-color: #504945;
+     /*background-color: #504945;*/
      /*background-color: #f2f2f2;*/
-     /*background-color: #ffffff;*/
+     background-color: #ffffff;
 }
 
 #wrapper {
