--- a/css/execas.css
+++ b/css/execas.css
@@ -130,7 +130,7 @@ p {
 .header h1 {
      font-size: 4rem;
      margin-right: 3rem;
-     color: #343434;
+     color: #d65d0e;
      display: inline;
      margin-top: 0px;
      margin-bottom:0px;
