--- a/css/execas.css
+++ b/css/execas.css
@@ -118,7 +118,7 @@ p {
 .header {
      font-family: 'Inconsolata', monospace;
      margin-top:0;
-     background-color:#ffffff;
+     background-color:#fbf1c7;
      color: #000000;
      margin:0 auto;
      max-width: 720px;
