--- a/css/execas.css
+++ b/css/execas.css
@@ -40,8 +40,8 @@ pre {
      padding-left: 10px;
      padding-bottom: 12px;
      padding-top: 12px;
-     border:1px solid #707070;
-     border-left:4px solid #707070;
+     border:1px solid #a89984;
+     border-left:4px solid #a89984;
      white-space: pre;
      color:#000000;
      overflow: auto;
@@ -118,7 +118,7 @@ p {
 .header {
      font-family: 'Inconsolata', monospace;
      margin-top:0;
-     background-color:#fbf1c7;
+     background-color:#a89984;
      color: #000000;
      margin:0 auto;
      max-width: 720px;
