--- a/css/execas.css
+++ b/css/execas.css
@@ -8,7 +8,7 @@ body {
      /*font-family:"Lato","Helvetica Neue",Helvetica,Arial,sans-serif;*/
      font-weight: 400;
      color: #000000;
-     font-size: 15px;
+     font-size: 16px;
      /*background-color: #f5f1ed;*/
      /*background-color: #504945;*/
      /*background-color: #f2f2f2;*/
@@ -118,7 +118,7 @@ p {
 .header {
      font-family: 'Inconsolata', monospace;
      margin-top:0;
-     background-color:#a89984;
+     background-color:#1d2021;
      color: #000000;
      margin:0 auto;
      max-width: 720px;
@@ -130,7 +130,7 @@ p {
 .header h1 {
      font-size: 4rem;
      margin-right: 3rem;
-     color: #d65d0e;
+     color: #458588;
      display: inline;
      margin-top: 0px;
      margin-bottom:0px;
