--- a/css/execas.css
+++ b/css/execas.css
@@ -124,7 +124,7 @@ p {
      max-width: 720px;
      padding: 10px 14px 10px 14px;
      /*border-bottom: 2px solid #707070;*/
-     /*border-radius: 0px 30px 0px 0px;     */
+     border-radius: 5px 5px 5px 5px;
 }
 
 .header h1 {
