--- a/css/execas.css
+++ b/css/execas.css
@@ -16,7 +16,7 @@ body {
 }
 
 #wrapper {
-     padding: 30px 15px 70px 15px;
+     padding: 30px 0px 70px 15px;
      max-width: 718px;
      background-color: #ffffff;
      margin: 0 auto; 
@@ -259,7 +259,7 @@ END: postinfo
 */
 
 .post ul {
-     list-style-type:square;
+     list-style-type:none;
 }
 
 /* from https://codepen.io/andresdhn/pen/meNwoy */
