--- a/css/execas.css
+++ b/css/execas.css
@@ -123,7 +123,7 @@ p {
      margin:0 auto;
      max-width: 720px;
      padding: 10px 14px 10px 14px;
-     /*border-bottom: 2px solid #707070;*/
+     border:1px solid #707070
 }
 
 .header h1 {
