--- a/css/execas.css
+++ b/css/execas.css
@@ -119,7 +119,7 @@ p {
      font-family: 'Inconsolata', monospace;
      margin-top:0;
      background-color:#1d2021;
-     color: #000000;
+     color: #fbf1c7;
      margin:0 auto;
      max-width: 720px;
      padding: 10px 14px 10px 14px;
