--- a/css/execas.css
+++ b/css/execas.css
@@ -129,7 +129,7 @@ p {
 .header h1 {
      font-size: 4rem;
      margin-right: 3rem;
-     color: #ebdbb2;
+     color: #fb4934;
      display: inline;
      margin-top: 0px;
      margin-bottom:0px;
