--- a/css/execas.css
+++ b/css/execas.css
@@ -128,8 +128,8 @@ p {
 
 .header h1 {
      font-size: 4rem;
-     margin-right: 3rem;
-     color: #fb4934;
+     margin-right: 2rem;
+     color: #ffffff;
      display: inline;
      margin-top: 0px;
      margin-bottom:0px;
