--- a/css/execas.css
+++ b/css/execas.css
@@ -34,7 +34,8 @@ pre {
      /*background-color: #f5f5f5;*/
      /*background-color: #f6f8fa;*/
      /*background-color:#232c31;*/
-     background-color:#32302f;
+     /*     background-color:#32302f;*/
+     background-color:#fbf1c7;
      margin-left:0px;
      margin-right:5px;
      padding-left: 10px;
@@ -55,7 +56,8 @@ pre code {
      border-style: none;
      whitespace: pre;
      font-size:13px;
-     background-color:#32302f;
+     /*background-color:#32302f;*/
+     background-color:#fbf1c7;
      color:#ffffff;
      border-width: 0px;
      border-radius:0px;
