--- a/css/execas.css
+++ b/css/execas.css
@@ -58,7 +58,7 @@ pre code {
      font-size:13px;
      /*background-color:#32302f;*/
      background-color:#fbf1c7;
-     color:#ffffff;
+     color:#3c3836;
      border-width: 0px;
      border-radius:0px;
      padding:0;
