--- a/css/execas.css
+++ b/css/execas.css
@@ -30,6 +30,20 @@ img {
      margin-right: auto;
 }
 
+.term {
+     background-color:#32302f;
+     margin-left:0px;
+     margin-right:5px;
+     padding-left: 10px;
+     padding-bottom: 12px;
+     padding-top: 12px;
+     border:1px solid #928374;
+     border-left:4px solid #928374;
+     white-space: pre;
+     color:#ffffff;
+     overflow: auto;
+}
+
 pre {
      /*background-color: #f5f5f5;*/
      /*background-color: #f6f8fa;*/
@@ -49,6 +63,8 @@ pre {
      /*border-radius: 5px 5px 5px 5px;     */
 
 }
+
+
 
 pre code {
      font-family: "Source Code Pro", monospace;
