--- a/css/execas.css
+++ b/css/execas.css
@@ -43,7 +43,8 @@ img {
      color:#ffffff;
      overflow: auto;
      font-family: "Source Code Pro", monospace;
-     padding:0;
+     font-size:13px;
+
 }
 
 pre {
