--- a/css/execas.css
+++ b/css/execas.css
@@ -34,6 +34,8 @@ img {
      background-color:#32302f;
      margin-left:0px;
      margin-right:5px;
+     margin-top:0;
+     margin-bottom:0;
      padding-left: 10px;
      padding-bottom: 12px;
      padding-top: 12px;
