--- a/css/syntax-highlight.css
+++ b/css/syntax-highlight.css
@@ -1,7 +1,7 @@
 .highlight table td { padding: 5px; }
 .highlight table pre { margin: 0; }
 .highlight .cm {
-  color: #689d6a;
+  color: #458588;
 }
 
 /*
