--- a/css/execas.css
+++ b/css/execas.css
@@ -39,8 +39,8 @@ img {
      padding-left: 10px;
      padding-bottom: 12px;
      padding-top: 0px;
-     border:1px solid #928374;
-     border-left:4px solid #928374;
+     border:1px solid #458588;
+     border-left:4px solid #458588;
      white-space: pre;
      color:#ffffff;
      overflow: auto;
@@ -54,7 +54,7 @@ pre {
      /*background-color: #f6f8fa;*/
      /*background-color:#232c31;*/
      /*     background-color:#32302f;*/
-     background-color:#fbf1c7;
+     background-color:#f9f5d7;
      margin-left:0px;
      margin-right:5px;
      padding-left: 10px;
@@ -78,7 +78,7 @@ pre code {
      whitespace: pre;
      font-size:13px;
      /*background-color:#32302f;*/
-     background-color:#fbf1c7;
+     background-color:#f9f5d7;
      color:#3c3836;
      border-width: 0px;
      border-radius:0px;
