--- a/css/execas.css
+++ b/css/execas.css
@@ -31,7 +31,7 @@ img {
 }
 
 .term {
-     background-color:#32302f;
+     background-color:#a89984;
      margin-left:0px;
      margin-right:5px;
      margin-top:0;
