--- a/css/execas.css
+++ b/css/execas.css
@@ -41,6 +41,7 @@ img {
      padding-top: 0px;
      border:1px solid #076678;
      border-left:4px solid #076678;
+     font-style:bold;
      white-space: pre;
      color:#282828;
      overflow: auto;
