--- a/css/execas.css
+++ b/css/execas.css
@@ -31,7 +31,7 @@ img {
 }
 
 .term {
-     background-color:#bdae93;
+     background-color:#d5c4a1;
      margin-left:0px;
      margin-right:5px;
      margin-top:0;
@@ -41,7 +41,6 @@ img {
      padding-top: 0px;
      border:1px solid #076678;
      border-left:4px solid #076678;
-     font-weight:bold;
      white-space: pre;
      color:#282828;
      overflow: auto;
