--- a/css/execas.css
+++ b/css/execas.css
@@ -54,13 +54,13 @@ pre {
      /*background-color: #f6f8fa;*/
      /*background-color:#232c31;*/
      /*     background-color:#32302f;*/
-     background-color:#f9f5d7;
+     background-color:#ffffff;
      margin-left:0px;
      margin-right:5px;
      padding-left: 10px;
      padding-bottom: 12px;
      padding-top: 12px;
-     border:1px solid #928374;
+     border:3px solid #928374;
      border-left:4px solid #928374;
      white-space: pre;
      overflow: auto;
@@ -77,7 +77,7 @@ pre code {
      whitespace: pre;
      font-size:13px;
      /*background-color:#32302f;*/
-     background-color:#f9f5d7;
+     background-color:#ffffff;
      color:#3c3836;
      border-width: 0px;
      border-radius:0px;
