--- a/css/execas.css
+++ b/css/execas.css
@@ -42,7 +42,7 @@ img {
      border:1px solid #928374;
      border-left:4px solid #928374;
      white-space: pre;
-     color:#282828;
+     color:#3c3836;
      overflow: auto;
      font-family: "Source Code Pro", monospace;
      font-size:13px;
