--- a/css/execas.css
+++ b/css/execas.css
@@ -78,7 +78,7 @@ pre code {
      font-size:13px;
      /*background-color:#32302f;*/
      background-color:#ffffff;
-     color:#3c3836;
+     color:#282828;
      border-width: 0px;
      border-radius:0px;
      padding:0;
