--- a/css/execas.css
+++ b/css/execas.css
@@ -60,8 +60,8 @@ pre {
      padding-left: 10px;
      padding-bottom: 12px;
      padding-top: 12px;
-     border:1px solid #076678;
-     border-left:4px solid #076678;
+     border:1px solid #af3a03;
+     border-left:4px solid #af3a03;
      white-space: pre;
      overflow: auto;
      /*border-radius: 5px 5px 5px 5px;     */
