--- a/css/execas.css
+++ b/css/execas.css
@@ -39,8 +39,8 @@ img {
      padding-left: 10px;
      padding-bottom: 12px;
      padding-top: 0px;
-     border:1px solid #427b58;
-     border-left:4px solid #427b58;
+     border:1px solid #b57614;
+     border-left:4px solid #b57614;
      white-space: pre;
      color:#3c3836;
      overflow: auto;
@@ -60,8 +60,8 @@ pre {
      padding-left: 10px;
      padding-bottom: 12px;
      padding-top: 12px;
-     border:1px solid #af3a03;
-     border-left:4px solid #af3a03;
+     border:1px solid #076678;
+     border-left:4px solid #076678;
      white-space: pre;
      overflow: auto;
      /*border-radius: 5px 5px 5px 5px;     */
