--- a/css/execas.css
+++ b/css/execas.css
@@ -50,18 +50,14 @@ img {
 }
 
 pre {
-     /*background-color: #f5f5f5;*/
-     /*background-color: #f6f8fa;*/
-     /*background-color:#232c31;*/
-     /*     background-color:#32302f;*/
      background-color:#ffffff;
      margin-left:0px;
      margin-right:5px;
      padding-left: 10px;
      padding-bottom: 12px;
      padding-top: 12px;
-     border:1px solid #f8f8ff;
-     border-left:4px solid #f8f8ff;
+     border:1px solid #282828;
+     border-left:4px solid #282828;
      white-space: pre;
      overflow: auto;
      /*border-radius: 5px 5px 5px 5px;     */
