--- a/css/execas.css
+++ b/css/execas.css
@@ -3,9 +3,9 @@ html, body {
 }
 
 body {
-     /*font-family: 'PT Sans', sans-serif;*/
+     font-family: 'PT Sans', sans-serif;
      /*font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Sans", sans-serif;*/
-     font-family:"Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
+     /*font-family:"Lato","Helvetica Neue",Helvetica,Arial,sans-serif;*/
      font-weight: 400;
      color: #000000;
      font-size: 16px;
