--- a/css/execas.css
+++ b/css/execas.css
@@ -135,7 +135,7 @@ p {
 .header {
      font-family: 'Inconsolata', monospace;
      margin-top:0;
-     background-color:#1d2021;
+     background-color:#282828;
      color: #fbf1c7;
      margin:0 auto;
      max-width: 720px;
