--- a/css/execas.css
+++ b/css/execas.css
@@ -137,7 +137,7 @@ p {
      margin:0 auto;
      max-width: 720px;
      padding: 10px 24px 10px 24px;
-     border:1px solid #f6f8fa;
+     border:1px solid #282828;
 }
 
 .header h1 {
