--- a/css/execas.css
+++ b/css/execas.css
@@ -94,7 +94,7 @@ blockquote {
      padding-right: 10px;
      border-left:4px solid #d33682;
      color:#000000;
-     font-size: 12px;
+     font-size: 13px;
 
 
 }
@@ -166,10 +166,13 @@ list of matching posts beneath tag name header
 }
 
 .tag-posts {
+    width: 650px;
     padding-left: 0.3rem;
     list-style: none;
     margin-top: 0rem;
-    
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 
@@ -183,7 +186,7 @@ list of matching posts beneath tag name header
 .tag-posts li small {
     font-size: 60%;
     margin-right: 3px;
-    color: #3c3836;
+    color: #999;
 }
 
 .tag-posts li {
@@ -191,7 +194,7 @@ list of matching posts beneath tag name header
      margin-top: 0rem;
 }
 .tag-posts h3 a {
-     color: #282828;
+     color: #000000;
 }
 
 .top-tagmarks {
