--- a/css/execas.css
+++ b/css/execas.css
@@ -36,7 +36,7 @@ img {
      padding-left: 10px;
      padding-bottom: 12px;
      padding-top: 0px;
-     border:1px solid #282828;
+     /*border:1px solid #282828;*/
      border-left:4px solid #282828;
      white-space: pre;
      color:#282828;
