--- a/css/execas.css
+++ b/css/execas.css
@@ -166,7 +166,7 @@ list of matching posts beneath tag name header
 }
 
 .tag-posts {
-    width: 650px;
+    max-width: 450px;
     padding-left: 0.3rem;
     list-style: none;
     margin-top: 0rem;
