--- a/css/execas.css
+++ b/css/execas.css
@@ -83,7 +83,7 @@ code {
      whitespace:normal;
      color:#000000;
      font-size:14px;
-     font-weight:bold;
+     font-weight:500;
      padding:1px 2px;
 }
 
