--- a/css/execas.css
+++ b/css/execas.css
@@ -78,7 +78,7 @@ pre code {
 }
 
 code {
-     /*background-color: #f6f8fa;*/
+     background-color: #f6f8fa;
      font-family: "Source Code Pro", monospace;
      whitespace:normal;
      color:#000000;
