--- a/css/execas.css
+++ b/css/execas.css
@@ -78,10 +78,10 @@ pre code {
 }
 
 code {
-     background-color: #f6f8fa;
+     /*background-color: #f6f8fa;*/
      font-family: "Source Code Pro", monospace;
      whitespace:normal;
-     color:#000000;
+     color:#222222;
      font-size:14px;
      padding:1px 2px;
 }
