--- a/css/execas.css
+++ b/css/execas.css
@@ -29,7 +29,7 @@ img {
 
 .term {
      /*background-color:#f6f8fa;*/
-     background-color:#fdfdfd;
+     background-color:#fafafa;
      margin-left:0px;
      margin-right:5px;
      margin-top:0;
