--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
  <html lang="en-us">
  <head> 
-  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+  <!--<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet"> 
-  <meta name="HandheldFriendly" content="true">
+  <meta name="HandheldFriendly" content="true"> -->
   <title>
    {% if page.title == "Home" %}
     {{ site.title }} &middot; {{ site.tagline }}
@@ -14,8 +14,8 @@
     {{ page.title }} &middot; {{ site.title }}
    {% endif %}
   </title>
-  <link rel="stylesheet" href="{{ site.baseurl }}/css/execas.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}/css/syntax-highlight.css">
+  <!-- <link rel="stylesheet" href="{{ site.baseurl }}/css/execas.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/syntax-highlight.css"> -->
   </head>
  <body>
   <div class="header">
