--- a/css/execas.css
+++ b/css/execas.css
@@ -27,7 +27,7 @@ img {
      margin-right: auto;
 }
 pre {
-     background-color:#ffffff;
+     background-color:#d1d5da;
      margin-left:0px;
      margin-right:5px;
      padding-left: 10px;
