--- a/css/execas.css
+++ b/css/execas.css
@@ -27,7 +27,7 @@ img {
      margin-right: auto;
 }
 pre {
-     background-color:#d1d5da;
+     background-color:#efefef;
      margin-left:0px;
      margin-right:5px;
      padding-left: 10px;
@@ -35,7 +35,7 @@ pre {
      padding-top: 12px;
      white-space: pre;
      border: 1px solid #efefef;
-     border-left:4px solid #efefef;
+     border-left:4px solid #d1d5da;
      overflow: auto;
      /*border-radius: 5px 5px 5px 5px;     */
 
@@ -49,7 +49,7 @@ pre code {
      border-style: none;
      whitespace: pre;
      font-size:13px;
-     background-color:#ffffff;
+     background-color:#efefef;
      color:#282828;
      border-width: 0px;
      border-radius:0px;
