--- a/css/execas.css
+++ b/css/execas.css
@@ -27,7 +27,7 @@ img {
      margin-right: auto;
 }
 pre {
-     background-color:#efefef;
+     background-color:#ffffff;
      margin-left:0px;
      margin-right:5px;
      padding-left: 10px;
@@ -49,7 +49,7 @@ pre code {
      border-style: none;
      whitespace: pre;
      font-size:13px;
-     background-color:#efefef;
+     background-color:#ffffff;
      color:#282828;
      border-width: 0px;
      border-radius:0px;
