--- a/css/execas.css
+++ b/css/execas.css
@@ -37,6 +37,7 @@ pre {
      border: 1px solid #efefef;
      border-left:4px solid #efefef;
      overflow: auto;
+     color:#282828;
      /*border-radius: 5px 5px 5px 5px;     */
 
 }
