--- a/css/execas.css
+++ b/css/execas.css
@@ -39,7 +39,7 @@ pre {
      overflow: auto;
      color:#000000;
      /*border-radius: 5px 5px 5px 5px;     */
-     scrollbar-color: #d1d5da #efefef;
+     scrollbar-color: #efefef #d1d5da;
 
 }
 
