--- a/css/execas.css
+++ b/css/execas.css
@@ -34,8 +34,8 @@ pre {
      padding-bottom: 12px;
      padding-top: 12px;
      white-space: pre;
-     border: 1px solid #efefef;
-     border-left:4px solid #efefef;
+     border: 1px solid #d1d5da;
+     border-left:4px solid #d1d5da;
      overflow: auto;
      color:#000000;
      /*border-radius: 5px 5px 5px 5px;     */
