--- a/css/execas.css
+++ b/css/execas.css
@@ -17,7 +17,7 @@ body {
      max-width: 718px;
      background-color: #ffffff;
      margin: 0 auto; 
-     border: 1px solid #000000;
+     border: 1px solid #707070;
 }
 
 img {
@@ -39,7 +39,7 @@ pre {
      overflow: auto;
      color:#000000;
      /*border-radius: 5px 5px 5px 5px;     */
-     scrollbar-color: #909090 #d1d5da;
+     scrollbar-color: #aaaaaa #d1d5da;
 
 }
 
