--- a/css/execas.css
+++ b/css/execas.css
@@ -35,7 +35,7 @@ pre {
      padding-top: 12px;
      white-space: pre;
      border: 1px solid #efefef;
-     border-left:4px solid #d1d5da;
+     border-left:4px solid #efefef;
      overflow: auto;
      color:#000000;
      /*border-radius: 5px 5px 5px 5px;     */
