--- a/css/execas.css
+++ b/css/execas.css
@@ -17,7 +17,7 @@ body {
      max-width: 718px;
      background-color: #ffffff;
      margin: 0 auto; 
-     border: 1px solid #707070;
+     border: 1px solid #222222;
 }
 
 img {
@@ -34,8 +34,8 @@ pre {
      padding-bottom: 12px;
      padding-top: 12px;
      white-space: pre;
-     border: 1px solid #efefef;
-     border-left:4px solid #efefef;
+     border: 1px solid #707070;
+     border-left:4px solid #707070;
      overflow: auto;
      color:#000000;
      /*border-radius: 5px 5px 5px 5px;     */
