--- a/css/execas.css
+++ b/css/execas.css
@@ -35,7 +35,7 @@ pre {
      padding-top: 12px;
      white-space: pre;
      border: 1px solid #707070;
-     border-left:4px solid #707070;
+     border-left:4px solid #d1d5da;
      overflow: auto;
      color:#000000;
      /*border-radius: 5px 5px 5px 5px;     */
