--- a/css/execas.css
+++ b/css/execas.css
@@ -34,7 +34,7 @@ pre {
      padding-bottom: 12px;
      padding-top: 12px;
      white-space: pre;
-     border: 1px solid #707070;
+     border: 1px solid #d1d5da;
      border-left:4px solid #d1d5da;
      overflow: auto;
      color:#000000;
