--- a/css/execas.css
+++ b/css/execas.css
@@ -17,7 +17,7 @@ body {
      max-width: 718px;
      background-color: #ffffff;
      margin: 0 auto; 
-     border: 1px solid #222222;
+     border: 1px solid #efefef;
 }
 
 img {
