--- a/css/execas.css
+++ b/css/execas.css
@@ -113,7 +113,7 @@ p {
 .header {
      font-family: 'Inconsolata', monospace;
      margin-top:0;
-     background-color:#eeeeee;
+     background-color:#fcfcfc;
      color: #f6f8fa;
      margin:0 auto;
      max-width: 720px;
