--- a/css/execas.css
+++ b/css/execas.css
@@ -345,7 +345,7 @@ div:empty {
      font-family: 'Inconsolata', monospace;
      margin-bottom:0;     
      background-color:#fcfcfc;
-     color: #f6f8fa;
+     color: #000000;
      margin:0 auto;
      max-width: 720px;
      padding: 10px 24px 10px 24px;
