--- a/css/execas.css
+++ b/css/execas.css
@@ -9,7 +9,7 @@ body {
      font-weight: 400;
      color: #24292e;
      font-size: 16px;
-     background-color: #ffffff;
+     background-color: #707070;
 }
 
 #wrapper {
