--- a/css/execas.css
+++ b/css/execas.css
@@ -15,7 +15,7 @@ body {
 #wrapper {
      padding: 15px 25px 70px 25px;
      max-width: 718px;
-     background-color: #dddddd;
+     background-color: #eeeeee;
      margin: 0 auto; 
      border: 1px solid #000000;
 }
