--- a/css/execas.css
+++ b/css/execas.css
@@ -122,7 +122,7 @@ p {
 }
 
 .header h1 {
-     font-size: 2rem;
+     font-size: 3rem;
      margin-right: 2rem;
      color: #000000;
      display: inline;
@@ -260,6 +260,10 @@ END: postinfo
   content: '\2014';
   position: absolute;
   margin-left: -15px;
+}
+
+.post h1 {
+    font-size: 2rem;
 }
      
 .post h2 {
